--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ifeoluwa Oladeji
+title: Priscilla Akinwale
 logo: /New folder/WhatsApp headshot.JPG
 ##description: text below image
 show_downloads: true
