--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Priscilla Akinwale
-logo: /New folder/WhatsApp headshot.JPG
+logo: /New folder/WhatsApp Image 2025-08-10 at 16.01.28_51b952c2.jpg
 ##description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
